# microscope_command_server

./: .gitignore  README.md  __init__.py  pyproject.toml
acquisition/: __init__.py  pipeline.py  project.py  tiles.py  workflow.py
client/: __init__.py  client.py
configurations/: config_generic.yml
microscope_command_server/: __init__.py
microscope_command_server/acquisition/: __init__.py  workflow.py
microscope_command_server/calibration/: __init__.py  starburst_workflow.py  sunburst_workflow.py
microscope_command_server/client/: __init__.py  client.py
microscope_command_server/server/: __init__.py  protocol.py  qp_server.py
server/: __init__.py  protocol.py  qp_server.py
tests/: __init__.py  conftest.py  test_tiles.py
