[project]
name = "microscope-server"
version = "1.0.0"
description = "Socket-based command server for remote microscope control and QuPath integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mike Nelson", email = "msnelson8@wisc.edu"},
    {name = "Bin Li", email = "bli346@wisc.edu"},
    {name = "Jenu Chacko", email = "jenu.chacko@wisc.edu"}
]
dependencies = [
    "microscope-control>=1.0.0",
    "ppm-library>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/microscope-server"
"Bug Tracker" = "https://github.com/your-org/microscope-server/issues"

[project.scripts]
microscope-server = "microscope_server.server.qp_server:main"
get_stageXY = "microscope_server.client.client:get_stageXY"
get_stageZ = "microscope_server.client.client:get_stageZ"
move_stageXY = "microscope_server.client.client:move_stageXY"
move_stageZ = "microscope_server.client.client:move_stageZ"
get_stageR = "microscope_server.client.client:get_stageR"
move_stageR = "microscope_server.client.client:move_stageR"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package files are at repository root (microscope_command_server/ contains __init__.py directly)
# The code uses "microscope_server" for imports but directory is "microscope_command_server"
# A symlink microscope_server -> microscope_command_server resolves this naming mismatch
# Use "." to indicate the repository root itself is the package
packages = ["."]

[tool.ruff]
line-length = 100
extend-select = ["C4", "NPY", "PD", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=microscope_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
