[project]
name = "microscope-command-server"
version = "1.1.0"
description = "Socket-based command server for remote microscope control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mike Nelson", email = "msnelson8@wisc.edu"},
    {name = "Bin Li", email = "bli346@wisc.edu"},
    {name = "Jenu Chacko", email = "jenu.chacko@wisc.edu"}
]
dependencies = [
    "microscope-control>=1.0.0",
    "ppm-library>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/microscope-server"
"Bug Tracker" = "https://github.com/your-org/microscope-server/issues"

[project.scripts]
microscope-command-server = "microscope_command_server.server.qp_server:main"
get_stageXY = "microscope_command_server.client.client:get_stageXY"
get_stageZ = "microscope_command_server.client.client:get_stageZ"
move_stageXY = "microscope_command_server.client.client:move_stageXY"
move_stageZ = "microscope_command_server.client.client:move_stageZ"
get_stageR = "microscope_command_server.client.client:get_stageR"
move_stageR = "microscope_command_server.client.client:move_stageR"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package files are in microscope_command_server/ subdirectory
packages = ["microscope_command_server"]

[tool.ruff]
line-length = 100
extend-select = ["C4", "NPY", "PD", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=microscope_command_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
